# BSE_assignement

./: README.md  modern-portfolio-theory.qmd  pyproject.toml  replicating-the-value-factor.html  replicating-the-value-factor.qmd
code/: 00-load-packages.py  01-prepare-data.py  02-build-value-factor.py  03-non-standard-errors.py
data/clean/: factors_ff5_monthly.parquet
data/raw/: factors_ff5_monthly_raw.parquet
results/tables/: p_hacking_results.csv  value_premium_comparison.csv
