[project]
name = "BSE_assignement"
version = "0.1.0"
requires-python = ">= 3.14.6"
dependencies = [
    "adjusttext>=1.4.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "numpy>=2.5.1",
    "plotnine>=0.15.7",
    "polars>=1.42.1",
    "pyfixest>=0.60.0",
    "ruff>=0.15.20",
    "tidyfinance>=0.3.0",
]
